# expenses

./: .gitignore  Dockerfile  README.md  db.sql  pyproject.toml  requirements.txt
.github/workflows/: linter.yml  tests.yml
expenses/: __main__.py  bot.py  const.py  db.py  ops.py  patterns.py  walnut.py
tests/: test_example_smses.py  test_regex_matches.py  test_report_formatting.py  test_reports.py
