[tool.poetry]
name = "expenses"
version = "0.1.0"
description = ""
authors = ["arjoonn sharma <arjoonn.94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
sqlalchemy = "^1.3.19"
psycopg2-binary = "^2.8.6"
python-telegram-bot = "^12.8"
click = "^7.1.2"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
